syntax = "proto3";
option go_package = "HW5/grpc/proto";

message Amount{
  int32 id = 1;
  int32 lamport = 2;
  int32 amount = 3;
  int32 amountOfBids = 4;
}

message Ack{
  string outcome = 1; //fail, success or exception
  int32 lamport = 2;
}

message Empty{
  int32 lamport = 1;
}

message Outcome{
  int32 id = 1;
  int32 highestBid = 2;
  bool actionClosed= 3;
  int32 lamport = 4;
}

service Auction{
  rpc Bid (Amount) returns (Ack);
  rpc Result (Empty) returns (Outcome);
}

/* Everytime something is changed in proto file, run the following command in the terminal:
protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto.proto
*/